Multiple features added
- Added not found result
- Added Modal on property click
- Added property info card
- Added placeholder images for test

--- a/src/pages/Main.css
+++ b/src/pages/Main.css
@@ -11,3 +11,18 @@
 .searchFilter {
     padding-bottom: 20px;
 }
+
+.modal {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    outline: none;
+}
+
+.cardImage {
+    width: 100% 
+}
+
+.notFound {
+    width: 30%;
+}
